--- a/One-to-one-call-demo/Modules/Contact/AvailableDevicesController.xib
+++ b/One-to-one-call-demo/Modules/Contact/AvailableDevicesController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AvailableDevicesController" customModule="One_to_one_call_demo" customModuleProvider="target">
             <connections>
+                <outlet property="tableView" destination="8un-0L-ap4" id="NgF-7v-SZF"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,9 +21,16 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rdh-Zb-Ga1">
-                    <rect key="frame" x="20" y="27" width="21.5" height="22"/>
+                    <rect key="frame" x="20" y="27" width="32" height="32"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="32" id="Hda-Q7-dYh"/>
+                        <constraint firstAttribute="width" constant="32" id="wyD-3c-XaE"/>
+                    </constraints>
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" image="cross.fill" catalog="system"/>
+                    <connections>
+                        <action selector="didTapDismiss" destination="-1" eventType="touchUpInside" id="buz-go-BJa"/>
+                    </connections>
                 </button>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="8un-0L-ap4">
                     <rect key="frame" x="0.0" y="84" width="414" height="778"/>
