--- a/One-to-one-call-demo/Modules/Contact/Cell/AvailableDeviceCell.xib
+++ b/One-to-one-call-demo/Modules/Contact/Cell/AvailableDeviceCell.xib
@@ -30,6 +30,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="title" destination="GwY-BD-wgx" id="9Fn-Ov-icl"/>
+            </connections>
             <point key="canvasLocation" x="139" y="54"/>
         </tableViewCell>
     </objects>
