--- a/One-to-one-call-demo/Modules/Auth/Login/Login.storyboard
+++ b/One-to-one-call-demo/Modules/Auth/Login/Login.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -26,23 +26,23 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Applogo" translatesAutoresizingMaskIntoConstraints="NO" id="BrH-GD-xE1">
-                                        <rect key="frame" x="173" y="116.5" width="68" height="50"/>
+                                        <rect key="frame" x="173" y="118.5" width="68" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="68" id="0Hu-Pw-ume"/>
                                             <constraint firstAttribute="height" constant="50" id="Aut-PZ-9i4"/>
                                         </constraints>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VA9-sS-dgV">
-                                        <rect key="frame" x="41.5" y="198.5" width="331" height="465.5"/>
+                                        <rect key="frame" x="41.5" y="200.5" width="331" height="461.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R3P-os-ack">
-                                                <rect key="frame" x="134" y="32" width="63" height="27.5"/>
+                                                <rect key="frame" x="134.5" y="32" width="62" height="23.5"/>
                                                 <fontDescription key="fontDescription" name="Manrope-Medium" family="Manrope" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="TDD-WG-xaR">
-                                                <rect key="frame" x="14" y="123.5" width="303" height="92"/>
+                                                <rect key="frame" x="14" y="119.5" width="303" height="92"/>
                                                 <subviews>
                                                     <textField opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username / Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OQM-dw-c6k">
                                                         <rect key="frame" x="0.0" y="0.0" width="303" height="38"/>
@@ -63,7 +63,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="38" translatesAutoresizingMaskIntoConstraints="NO" id="8Ts-fl-vwE">
-                                                <rect key="frame" x="85.5" y="313.5" width="160" height="116"/>
+                                                <rect key="frame" x="85.5" y="309.5" width="160" height="116"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aTb-MB-wkE" customClass="CustomButton" customModule="One_to_one_call_demo" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="160" height="48"/>
@@ -86,9 +86,22 @@
                                                     </button>
                                                 </subviews>
                                             </stackView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mg7-RL-It4">
+                                                <rect key="frame" x="293" y="8" width="30" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="qZv-i5-3T7"/>
+                                                    <constraint firstAttribute="width" constant="30" id="s8e-2m-Cg1"/>
+                                                </constraints>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" image="qr-code"/>
+                                                <connections>
+                                                    <action selector="didTapQRCode:" destination="hvh-ac-zEs" eventType="touchUpInside" id="QrA-B3-xvH"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
+                                            <constraint firstItem="mg7-RL-It4" firstAttribute="top" secondItem="VA9-sS-dgV" secondAttribute="top" constant="8" id="0b4-Bx-i1k"/>
                                             <constraint firstItem="8Ts-fl-vwE" firstAttribute="centerX" secondItem="VA9-sS-dgV" secondAttribute="centerX" id="Apz-B8-PpR"/>
                                             <constraint firstAttribute="trailing" secondItem="TDD-WG-xaR" secondAttribute="trailing" constant="14" id="Kdr-2M-ncP"/>
                                             <constraint firstAttribute="bottom" secondItem="8Ts-fl-vwE" secondAttribute="bottom" constant="36" id="RPx-gw-bas"/>
@@ -97,6 +110,7 @@
                                             <constraint firstItem="8Ts-fl-vwE" firstAttribute="top" secondItem="TDD-WG-xaR" secondAttribute="bottom" constant="98" id="hgy-cf-8Mf"/>
                                             <constraint firstItem="TDD-WG-xaR" firstAttribute="top" secondItem="R3P-os-ack" secondAttribute="bottom" constant="64" id="pmQ-uE-6cU"/>
                                             <constraint firstItem="R3P-os-ack" firstAttribute="centerX" secondItem="VA9-sS-dgV" secondAttribute="centerX" id="qdW-D4-NWn"/>
+                                            <constraint firstAttribute="trailing" secondItem="mg7-RL-It4" secondAttribute="trailing" constant="8" id="y40-QJ-p2Z"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -134,6 +148,7 @@
     </scenes>
     <resources>
         <image name="Applogo" width="68" height="50.5"/>
+        <image name="qr-code" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
