--- a/One-to-one-call-demo/Modules/Auth/Login/Login.storyboard
+++ b/One-to-one-call-demo/Modules/Auth/Login/Login.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -86,9 +86,23 @@
                                                     </button>
                                                 </subviews>
                                             </stackView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dpf-wu-dGM">
+                                                <rect key="frame" x="291" y="10" width="30" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="30" id="5df-Ga-3Pm"/>
+                                                    <constraint firstAttribute="height" constant="30" id="q4Z-JP-rPt"/>
+                                                </constraints>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" image="qrcode" catalog="system"/>
+                                                <connections>
+                                                    <action selector="didTapQRCode:" destination="hvh-ac-zEs" eventType="touchUpInside" id="gSd-TK-VEh"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="dpf-wu-dGM" secondAttribute="trailing" constant="10" id="6sz-Fe-P9f"/>
+                                            <constraint firstItem="dpf-wu-dGM" firstAttribute="top" secondItem="VA9-sS-dgV" secondAttribute="top" constant="10" id="9IX-we-s2j"/>
                                             <constraint firstItem="8Ts-fl-vwE" firstAttribute="centerX" secondItem="VA9-sS-dgV" secondAttribute="centerX" id="Apz-B8-PpR"/>
                                             <constraint firstAttribute="trailing" secondItem="TDD-WG-xaR" secondAttribute="trailing" constant="14" id="Kdr-2M-ncP"/>
                                             <constraint firstAttribute="bottom" secondItem="8Ts-fl-vwE" secondAttribute="bottom" constant="36" id="RPx-gw-bas"/>
@@ -134,6 +148,7 @@
     </scenes>
     <resources>
         <image name="Applogo" width="68" height="50.5"/>
+        <image name="qrcode" catalog="system" width="128" height="114"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
