--- a/One-to-one-call-demo/Modules/Calling/Xib/AudioDailingView.xib
+++ b/One-to-one-call-demo/Modules/Calling/Xib/AudioDailingView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -123,6 +123,7 @@
                 <outlet property="callTime" destination="3ko-iW-ThD" id="Uvr-1u-bBs"/>
                 <outlet property="connectedStack" destination="NdS-t2-qAD" id="lmc-Bq-4Tq"/>
                 <outlet property="connectedUserName" destination="hUG-HL-gGj" id="JRx-6E-Wq4"/>
+                <outlet property="micButton" destination="fQp-mu-s0v" id="vtA-tO-JgN"/>
                 <outlet property="speakerButton" destination="yRL-CB-aFj" id="twN-V2-efH"/>
                 <outlet property="tryingStack" destination="GbI-pX-RYJ" id="K7D-1u-oQf"/>
                 <outlet property="tryingUserName" destination="xSr-zF-IxD" id="SDw-xL-AB9"/>
