--- a/One-to-one-call-demo/Modules/Calling/Xib/VideoDailingView.xib
+++ b/One-to-one-call-demo/Modules/Calling/Xib/VideoDailingView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,7 +27,7 @@
                     <color key="backgroundColor" red="0.91372549020000005" green="0.91372549020000005" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="efB-Z6-V7O">
-                    <rect key="frame" x="162.5" y="98.5" width="50" height="100"/>
+                    <rect key="frame" x="162.5" y="118.5" width="50" height="100"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fb9-4M-XfB">
                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -44,7 +44,7 @@
                     </subviews>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="SWh-Ol-baD">
-                    <rect key="frame" x="20" y="28" width="176" height="70.5"/>
+                    <rect key="frame" x="20" y="48" width="176" height="70.5"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You are video Call with " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uH5-13-ds7">
                             <rect key="frame" x="0.0" y="0.0" width="176" height="20.5"/>
@@ -61,10 +61,10 @@
                     </subviews>
                 </stackView>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noun" translatesAutoresizingMaskIntoConstraints="NO" id="Jsc-IP-on6">
-                    <rect key="frame" x="137.5" y="283.5" width="100" height="100"/>
+                    <rect key="frame" x="137.5" y="293.5" width="100" height="100"/>
                 </imageView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Rq1-Bs-964">
-                    <rect key="frame" x="305" y="45" width="50" height="174"/>
+                    <rect key="frame" x="305" y="65" width="50" height="174"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A4o-hc-3QZ">
                             <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
@@ -144,10 +144,12 @@
             </constraints>
             <connections>
                 <outlet property="callState" destination="LHH-hS-PwE" id="wLs-23-McU"/>
+                <outlet property="camButton" destination="WEy-Gm-3mV" id="F3d-dn-pFj"/>
                 <outlet property="cameraButton" destination="ROQ-mf-Rq6" id="o8x-P1-h7N"/>
                 <outlet property="connectedStack" destination="SWh-Ol-baD" id="nfk-KV-ytQ"/>
                 <outlet property="connectedUserName" destination="xSG-Qn-Iqg" id="fHD-5K-omP"/>
                 <outlet property="localView" destination="Jf1-st-Nix" id="wYL-Gw-mFL"/>
+                <outlet property="muteButton" destination="60w-gI-bVR" id="ULQ-za-dWC"/>
                 <outlet property="personAvatar" destination="Jsc-IP-on6" id="KyN-P6-FUG"/>
                 <outlet property="remoteView" destination="SXs-Ax-xNB" id="h7a-rb-hq0"/>
                 <outlet property="speakerButton" destination="TCS-xH-U1w" id="CJD-nt-CSO"/>
