--- a/One-to-one-call-demo/Modules/Auth/Login/Login.storyboard
+++ b/One-to-one-call-demo/Modules/Auth/Login/Login.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -86,17 +86,30 @@
                                                     </button>
                                                 </subviews>
                                             </stackView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8QS-1R-MwU">
+                                                <rect key="frame" x="301.5" y="24" width="19.5" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="aZH-8L-PkI"/>
+                                                </constraints>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" image="qrcode" catalog="system"/>
+                                                <connections>
+                                                    <action selector="didTapScanner:" destination="hvh-ac-zEs" eventType="touchUpInside" id="G7G-hm-pOF"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="8Ts-fl-vwE" firstAttribute="centerX" secondItem="VA9-sS-dgV" secondAttribute="centerX" id="Apz-B8-PpR"/>
                                             <constraint firstAttribute="trailing" secondItem="TDD-WG-xaR" secondAttribute="trailing" constant="14" id="Kdr-2M-ncP"/>
+                                            <constraint firstItem="8QS-1R-MwU" firstAttribute="top" secondItem="VA9-sS-dgV" secondAttribute="top" constant="24" id="PVx-Ax-qcS"/>
                                             <constraint firstAttribute="bottom" secondItem="8Ts-fl-vwE" secondAttribute="bottom" constant="36" id="RPx-gw-bas"/>
                                             <constraint firstItem="TDD-WG-xaR" firstAttribute="leading" secondItem="VA9-sS-dgV" secondAttribute="leading" constant="14" id="bgo-TI-Ti1"/>
                                             <constraint firstItem="R3P-os-ack" firstAttribute="top" secondItem="VA9-sS-dgV" secondAttribute="top" constant="32" id="hEk-I2-DfP"/>
                                             <constraint firstItem="8Ts-fl-vwE" firstAttribute="top" secondItem="TDD-WG-xaR" secondAttribute="bottom" constant="98" id="hgy-cf-8Mf"/>
                                             <constraint firstItem="TDD-WG-xaR" firstAttribute="top" secondItem="R3P-os-ack" secondAttribute="bottom" constant="64" id="pmQ-uE-6cU"/>
                                             <constraint firstItem="R3P-os-ack" firstAttribute="centerX" secondItem="VA9-sS-dgV" secondAttribute="centerX" id="qdW-D4-NWn"/>
+                                            <constraint firstAttribute="trailing" secondItem="8QS-1R-MwU" secondAttribute="trailing" constant="10" id="x2c-MK-bGv"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -134,6 +147,7 @@
     </scenes>
     <resources>
         <image name="Applogo" width="68" height="50.5"/>
+        <image name="qrcode" catalog="system" width="128" height="114"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
