--- a/One-to-one-call-demo/Modules/Auth/Login/Login.storyboard
+++ b/One-to-one-call-demo/Modules/Auth/Login/Login.storyboard
@@ -26,23 +26,23 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Applogo" translatesAutoresizingMaskIntoConstraints="NO" id="BrH-GD-xE1">
-                                        <rect key="frame" x="173" y="116.5" width="68" height="50"/>
+                                        <rect key="frame" x="173" y="111.5" width="68" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="68" id="0Hu-Pw-ume"/>
                                             <constraint firstAttribute="height" constant="50" id="Aut-PZ-9i4"/>
                                         </constraints>
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VA9-sS-dgV">
-                                        <rect key="frame" x="41.5" y="198.5" width="331" height="465.5"/>
+                                        <rect key="frame" x="41.5" y="193.5" width="331" height="475.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R3P-os-ack">
-                                                <rect key="frame" x="134" y="32" width="63" height="27.5"/>
+                                                <rect key="frame" x="134" y="32" width="63" height="37.5"/>
                                                 <fontDescription key="fontDescription" name="Manrope-Medium" family="Manrope" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="TDD-WG-xaR">
-                                                <rect key="frame" x="14" y="123.5" width="303" height="92"/>
+                                                <rect key="frame" x="14" y="133.5" width="303" height="92"/>
                                                 <subviews>
                                                     <textField opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username / Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OQM-dw-c6k">
                                                         <rect key="frame" x="0.0" y="0.0" width="303" height="38"/>
@@ -63,7 +63,7 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="38" translatesAutoresizingMaskIntoConstraints="NO" id="8Ts-fl-vwE">
-                                                <rect key="frame" x="85.5" y="313.5" width="160" height="116"/>
+                                                <rect key="frame" x="85.5" y="323.5" width="160" height="116"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aTb-MB-wkE" customClass="CustomButton" customModule="One_to_one_call_demo" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="160" height="48"/>
@@ -87,8 +87,9 @@
                                                 </subviews>
                                             </stackView>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8QS-1R-MwU">
-                                                <rect key="frame" x="301.5" y="24" width="19.5" height="30"/>
+                                                <rect key="frame" x="266" y="35" width="30" height="30"/>
                                                 <constraints>
+                                                    <constraint firstAttribute="width" constant="30" id="4fx-eQ-aMq"/>
                                                     <constraint firstAttribute="height" constant="30" id="aZH-8L-PkI"/>
                                                 </constraints>
                                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -100,16 +101,17 @@
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
+                                            <constraint firstItem="8QS-1R-MwU" firstAttribute="top" secondItem="VA9-sS-dgV" secondAttribute="top" constant="35" id="3nu-lv-xWj"/>
                                             <constraint firstItem="8Ts-fl-vwE" firstAttribute="centerX" secondItem="VA9-sS-dgV" secondAttribute="centerX" id="Apz-B8-PpR"/>
                                             <constraint firstAttribute="trailing" secondItem="TDD-WG-xaR" secondAttribute="trailing" constant="14" id="Kdr-2M-ncP"/>
-                                            <constraint firstItem="8QS-1R-MwU" firstAttribute="top" secondItem="VA9-sS-dgV" secondAttribute="top" constant="24" id="PVx-Ax-qcS"/>
+                                            <constraint firstItem="TDD-WG-xaR" firstAttribute="top" secondItem="8QS-1R-MwU" secondAttribute="bottom" constant="68.5" id="LvR-mW-UbU"/>
                                             <constraint firstAttribute="bottom" secondItem="8Ts-fl-vwE" secondAttribute="bottom" constant="36" id="RPx-gw-bas"/>
                                             <constraint firstItem="TDD-WG-xaR" firstAttribute="leading" secondItem="VA9-sS-dgV" secondAttribute="leading" constant="14" id="bgo-TI-Ti1"/>
                                             <constraint firstItem="R3P-os-ack" firstAttribute="top" secondItem="VA9-sS-dgV" secondAttribute="top" constant="32" id="hEk-I2-DfP"/>
+                                            <constraint firstAttribute="trailing" secondItem="8QS-1R-MwU" secondAttribute="trailing" constant="35" id="hKX-mb-dvA"/>
                                             <constraint firstItem="8Ts-fl-vwE" firstAttribute="top" secondItem="TDD-WG-xaR" secondAttribute="bottom" constant="98" id="hgy-cf-8Mf"/>
                                             <constraint firstItem="TDD-WG-xaR" firstAttribute="top" secondItem="R3P-os-ack" secondAttribute="bottom" constant="64" id="pmQ-uE-6cU"/>
                                             <constraint firstItem="R3P-os-ack" firstAttribute="centerX" secondItem="VA9-sS-dgV" secondAttribute="centerX" id="qdW-D4-NWn"/>
-                                            <constraint firstAttribute="trailing" secondItem="8QS-1R-MwU" secondAttribute="trailing" constant="10" id="x2c-MK-bGv"/>
                                         </constraints>
                                     </view>
                                 </subviews>
