--- a/One-to-one-call-demo/Modules/Auth/Signup/SignUp.storyboard
+++ b/One-to-one-call-demo/Modules/Auth/Signup/SignUp.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -35,8 +35,8 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rAQ-I1-FeQ">
                                         <rect key="frame" x="41.5" y="216.5" width="331" height="463.5"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign Up to your account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gSZ-34-fR3">
-                                                <rect key="frame" x="54" y="32" width="223.5" height="27.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign Up " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gSZ-34-fR3">
+                                                <rect key="frame" x="127.5" y="32" width="76" height="27.5"/>
                                                 <fontDescription key="fontDescription" name="Manrope-Medium" family="Manrope" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -97,16 +97,30 @@
                                                     </button>
                                                 </subviews>
                                             </stackView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xeb-gH-4cE">
+                                                <rect key="frame" x="266" y="35" width="30" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="30" id="WZg-ai-dSz"/>
+                                                    <constraint firstAttribute="height" constant="30" id="kMl-Ym-Bj9"/>
+                                                </constraints>
+                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                <state key="normal" image="qrcode" catalog="system"/>
+                                                <connections>
+                                                    <action selector="didTapScanner:" destination="zyi-Jc-scf" eventType="touchUpInside" id="gNg-G8-CjJ"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="45B-1O-Ccu" secondAttribute="trailing" constant="15" id="I6q-Fe-Hlc"/>
                                             <constraint firstItem="gSZ-34-fR3" firstAttribute="top" secondItem="rAQ-I1-FeQ" secondAttribute="top" constant="32" id="KVh-Vq-MYy"/>
+                                            <constraint firstAttribute="trailing" secondItem="xeb-gH-4cE" secondAttribute="trailing" constant="35" id="NF6-dN-Oda"/>
                                             <constraint firstItem="cUW-Xt-cZ0" firstAttribute="centerX" secondItem="rAQ-I1-FeQ" secondAttribute="centerX" id="Nro-PX-pwq"/>
                                             <constraint firstItem="gSZ-34-fR3" firstAttribute="centerX" secondItem="rAQ-I1-FeQ" secondAttribute="centerX" id="Sdl-ag-Nzg"/>
                                             <constraint firstItem="45B-1O-Ccu" firstAttribute="leading" secondItem="rAQ-I1-FeQ" secondAttribute="leading" constant="15" id="hsM-su-Aew"/>
                                             <constraint firstItem="45B-1O-Ccu" firstAttribute="top" secondItem="gSZ-34-fR3" secondAttribute="bottom" constant="62" id="utF-ec-FCx"/>
                                             <constraint firstAttribute="bottom" secondItem="cUW-Xt-cZ0" secondAttribute="bottom" constant="36" id="w0g-u1-TAM"/>
+                                            <constraint firstItem="xeb-gH-4cE" firstAttribute="top" secondItem="rAQ-I1-FeQ" secondAttribute="top" constant="35" id="wYW-rj-3Zs"/>
                                             <constraint firstItem="cUW-Xt-cZ0" firstAttribute="top" secondItem="45B-1O-Ccu" secondAttribute="bottom" constant="44" id="zce-bV-Lgf"/>
                                         </constraints>
                                     </view>
@@ -145,6 +159,7 @@
     </scenes>
     <resources>
         <image name="Applogo" width="68" height="50.5"/>
+        <image name="qrcode" catalog="system" width="128" height="114"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
